--- a/styles/main.css
+++ b/styles/main.css
@@ -660,9 +660,9 @@ notification message {
     padding: var(--defaultGap);
     margin: var(--defaultGap);
     border: 1px solid;
-    /* border-width: 0 1px 1px 1px; */
     border-radius: var(--borderRadius);
     pointer-events: none;
+    box-shadow: 0px 2px 8px rgba(0, 0, 0, .25);
 }
 
 message {
