--- a/styles/light.css
+++ b/styles/light.css
@@ -20,9 +20,9 @@
     --messageColorHSL: var(--hueCreating), 100%, 40%;
     --highlightColorHSL: 50, 100%, 30%;
     --trayBackgroundHSL: var(--hueMain), 100%, 50%;
-    --trayCreatingBackgroundHSL: var(--hueCreating), 100%, 60%;
-    --trayGuessingBackgroundHSL: var(--hueGuessing), 100%, 50%;
-    --trayReviewingBackgroundHSL: var(--hueReviewing), 100%, 70%;
+    --trayCreatingBackgroundHSL: var(--hueCreating), 100%, 50%;
+    --trayGuessingBackgroundHSL: var(--hueGuessing), 100%, 40%;
+    --trayReviewingBackgroundHSL: var(--hueReviewing), 100%, 57%;
     --traySolvedBackgroundHSL: var(--hueSolved), 86%, 73%;
     --simpleCardForegroundHSL: 0, 0%, 0%;
     --simpleCardBackgroundHSL: 0, 100%, 100%;
@@ -66,7 +66,7 @@ notification {
 
 
 notification.meta {
-    background-image: linear-gradient(hsla(var(--appBackgroundDarkHSL), 1), hsla(var(--appBackgroundDarkHSL), .0) 200px), var(--textureHueSource), var(--textureSource);
+    background-image: linear-gradient(hsla(var(--appBackgroundDarkHSL), 1), hsla(var(--appBackgroundDarkHSL), .0) 50%), var(--textureHueSource), var(--textureSource);
 
 }
 
