--- a/styles/main.css
+++ b/styles/main.css
@@ -1776,6 +1776,7 @@ word:nth-child(4) {
 
 modal {
     position: absolute;
+    top: 0;
     display: flex;
     flex-direction: column;
     justify-content: start;
